libqt6c/src/libqcolordialog.hpp

typedef struct QColor QColor;
typedef struct QColorDialog QColorDialog;
typedef struct QEvent QEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QWidget QWidget;
QColorDialog* QColorDialog_new(QWidget* parent);
QColorDialog* QColorDialog_new2();
QColorDialog* QColorDialog_new3(const QColor* initial);
QColorDialog* QColorDialog_new4(const QColor* initial, QWidget* parent);
QMetaObject* QColorDialog_MetaObject(const QColorDialog* self);
void QColorDialog_SetCurrentColor(QColorDialog* self, const QColor* color);
QColor* QColorDialog_CurrentColor(const QColorDialog* self);
QColor* QColorDialog_SelectedColor(const QColorDialog* self);
void QColorDialog_SetOption(QColorDialog* self, int option);
bool QColorDialog_TestOption(const QColorDialog* self, int option);
void QColorDialog_SetOptions(QColorDialog* self, int options);
int QColorDialog_Options(const QColorDialog* self);
void QColorDialog_SetVisible(QColorDialog* self, bool visible);
QColor* QColorDialog_GetColor();
int QColorDialog_CustomCount();
QColor* QColorDialog_CustomColor(int index);
void QColorDialog_SetCustomColor(int index, QColor* color);
QColor* QColorDialog_StandardColor(int index);
void QColorDialog_SetStandardColor(int index, QColor* color);
void QColorDialog_CurrentColorChanged(QColorDialog* self, const QColor* color);
void QColorDialog_ColorSelected(QColorDialog* self, const QColor* color);
void QColorDialog_ChangeEvent(QColorDialog* self, QEvent* event);
void QColorDialog_Done(QColorDialog* self, int result);
void QColorDialog_SetOption2(QColorDialog* self, int option, bool on);
QColor* QColorDialog_GetColor1(const QColor* initial);
QColor* QColorDialog_GetColor2(const QColor* initial, QWidget* parent);
QColor* QColorDialog_GetColor3(const QColor* initial, QWidget* parent, const libqt_string title);
QColor* QColorDialog_GetColor4(const QColor* initial, QWidget* parent, const libqt_string title, int options);
void QColorDialog_Delete(QColorDialog* self);